fix: Python 3.13 호환성 문제 해결 및 팀원 가이드 개선
- requirements.txt: pydantic 버전 업데이트 (2.5.0 → 2.9.0)
- DEVELOPMENT.md: python3/pip3 명령어로 수정, 가상환경 활성화 가이드 추가
- README.md: python3/pip3 명령어로 수정

Python 3.13 환경에서 패키지 설치 및 서버 실행이 정상적으로 동작하도록 수정

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,14 +9,14 @@ python-multipart==0.0.6
 python-dotenv==1.0.0
 
 # 데이터 검증
-pydantic==2.5.0
-pydantic-settings==2.1.0
+pydantic==2.9.0
+pydantic-settings==2.6.0
 
 # HTTP 클라이언트 (AI API 호출용)
 httpx==0.25.2
 
-# 파일 처리
-Pillow==10.1.0
+# 파일 처리 (나중에 필요할 때 설치)
+# Pillow==10.4.0
 
 # 개발용 도구
 pytest==7.4.3
