fix: 렌더 배포를 위한 easyOCR 의존성 문제 해결
- easyOCR을 requirements.txt에서 주석 처리 (메모리 부족 문제)
- pytesseract를 대안 OCR로 사용하도록 코드 수정
- 렌더 전용 requirements-render.txt 파일 생성
- render.yaml 설정 파일 추가

--- a/requirements-render.txt
+++ b/requirements-render.txt
@@ -19,10 +19,10 @@ httpx==0.25.2
 Pillow==10.4.0
 aiofiles==23.2.1
 
-# OCR 라이브러리
+# OCR 라이브러리 (렌더 최적화)
 google-cloud-vision==3.10.2
-# easyocr==1.7.0  # 렌더 배포 시 메모리 부족으로 인해 주석 처리
 pytesseract==0.3.10
+# easyocr는 메모리 부족으로 제외
 
 # 문서 처리
 pypdf==4.0.1
