fix: 렌더 환경 파일 업로드 최적화
- 파일 크기 제한을 10MB로 줄임 (렌더 메모리 제한 고려)
- 사용 가능한 디렉토리 자동 탐지 및 권한 테스트
- 동기 파일 저장 방식으로 변경 (안정성 향상)
- google-cloud-vision 제거 (메모리 절약)
- 상세한 로깅으로 디버깅 개선

--- a/requirements-render.txt
+++ b/requirements-render.txt
@@ -20,7 +20,7 @@ Pillow==10.4.0
 aiofiles==23.2.1
 
 # OCR 라이브러리 (렌더 최적화)
-google-cloud-vision==3.10.2
+# google-cloud-vision==3.10.2  # 렌더에서 메모리 부족으로 제외
 pytesseract==0.3.10
 # easyocr는 메모리 부족으로 제외
 
